--- a/README
+++ b/README
@@ -1,40 +1,68 @@
-Phone-Number version 0.01
-=========================
+NAME
+    Phone::Number - Module to hold a phone number from a UK-centric point of
+    view.
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+    head1 VERSION
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+    Version 1.0.0
 
-INSTALLATION
+SYNOPSYS
+        use Phone::Number;
+    
+        my $num = new Phone::Number('02002221666');
+        print $num->formatted;    # 020 0222 1666
+        print $num->packed;       # 02002221666
+        print $num->number;       # +442002221666
+        print $num->plain;        # 442002221666
+        print $num->uk ? "yes" : "no"; # yes
 
-To install this module type the following:
+EXPORT
+    Nothing is exported
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+ROUTINES
+  new
+    Creates a new, immutable object using any unambiguous phone number
+    format.
 
-DEPENDENCIES
+        my $num = new Phone::Number('02002221666');
+        my $num = new Phone::Number('2002221666');
+        my $num = new Phone::Number('442002221666');
+        my $num = new Phone::Number('+442002221666');
+        my $new = new Phone::Number($num);
 
-This module requires these other modules and libraries:
+  formatted
+    Returns the number formatted with leading 0 and spaces.
 
-  blah blah blah
+  packed
+    Returns the number with leading 0, no spaces.
 
-COPYRIGHT AND LICENCE
+  number
+    Returns the number in international format starting with +.
 
-Put the correct copyright and licence information here.
+  plain
+    Returns the number in international format without the +.
 
-Copyright (C) 2012 by Cliff Stanford
+  uk
+    Returns a boolean: true if it is a valid UK number
 
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.10.1 or,
-at your option, any later version of Perl 5 you may have available.
+AUTHOR
+    Cliff Stanford, `<cpan@may.be>'
 
+BUGS
+    Please report any bugs or feature requests to `bug-phone-number at
+    rt.cpan.org', or through the web interface at
+    http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Phone-Number. I will be
+    notified, and then you'll automatically be notified of progress on your
+    bug as I make changes.
+
+SUPPORT
+    You can find documentation for this module with the perldoc command.
+
+        perldoc Phone::Number
+
+LICENSE AND COPYRIGHT
+    Copyright 2014 Cliff Stanford.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
